samples/_failures_safe/1761217339_eb089b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4b963a4e.c: In function ‘main’:
./samples/SAFE/__tmp_4b963a4e.c:186:38: error: missing terminating ' character
  186 |     if (len > 0 && input[len - 1] == '\n
      |                                      ^~~
./samples/SAFE/__tmp_4b963a4e.c:186:5: error: expected expression at end of input
  186 |     if (len > 0 && input[len - 1] == '\n
      |     ^~
./samples/SAFE/__tmp_4b963a4e.c:186:5: error: expected declaration or statement at end of input
